2008-04-19  Jürg Billeter  <j@bitron.ch>

	* vala/valaattributeprocessor.vala, vala/valaerrortype.vala,
	  vapi/dbus-glib-1.vapi, gobject/valaccodegenerator.vala: get D-Bus
	  sample working again

2008-04-19  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala:, vala/valadestructor.vala,
	  vala/valasemanticanalyzer.vala, gobject/valaccodeclassbinding.vala:
	  support `this' access in destructors, fixes bug 527997

2008-04-19  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: don't check for `pointer' struct

2008-04-19  Jürg Billeter  <j@bitron.ch>

	Replace `pointer' by `void*' in all bindings and remove pointer
	struct from GLib bindings, fixes bug 510085

2008-04-20  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* vapi/glib-2.0.vapi: replace 'pointer' by 'void*'

2008-04-19  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gio-2.0/: fix g_file_monitor_* bindings,
	  patch by Jaap A. Haitsma, fixes bug 528881

	* vapi/gio-2.0.vapi: regenerated

2008-04-19  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala, vala/valasignal.vala,
	  gobject/valaccodeassignmentbinding.vala: don't mangle D-Bus
	  signal names, fixes bug 528774

2008-04-19  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala, gobject/valaccodegenerator.vala:
	  fix crash when trying to iterate over pointer types,
	  fixes bug 528765

2008-04-19  Jürg Billeter  <j@bitron.ch>

	* vala/valadelegatetype.vala: fix to_string for nullable delegates

	* vapi/packages/gtk+-2.0/: fix gtk_about_dialog_set_*_hook
	  bindings, patch by Jaap A. Haitsma, fixes bug 528674

	* vapi/gtk+-2.0.vapi: regenerated

2008-04-19  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeassignmentbinding.vala,
	  gobject/valaccodebinding.vala, gobject/valaccodeclassbinding.vala,
	  gobject/valaccodemethodbinding.vala:

	  Mark generic type parameter properties as construct-only,
	  fixes bug 528567

2008-04-19  Jürg Billeter  <j@bitron.ch>
